miniextendr-macros/tests/ui/derive_into_list_on_enum.rs
//! Test: IntoList can only be derived for structs.

use miniextendr_macros::IntoList;

#[derive(IntoList)]
enum Bad {
    A,
    B,
}

fn main() {}
